--- a/package.json
+++ b/package.json
@@ -2,13 +2,53 @@
   "name": "react-toolchain-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "author": "",
   "license": "ISC",
   "scripts": {
-    "format": "prettier --write ."
+    "lint": "eslint --fix . --ext .ts,.tsx,.js,.jsx",
+    "prettier": "prettier --write .",
+    "build": "webpack --config webpack/webpack.prod.js",
+    "start": "webpack --config webpack/webpack.dev.js"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "web-vitals": "^3.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.8.1"
+    "@svgr/webpack": "^6.5.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@types/jest": "29.2.4",
+    "@types/node": "18.11.12",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.46.0",
+    "browserslist": "4.21.4",
+    "css-loader": "^6.7.2",
+    "dotenv": "^16.0.3",
+    "eslint": "8.0.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-standard-with-typescript": "23.0.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jest": "27.1.6",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-n": "15.0.0",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.31.11",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
+    "prettier": "2.8.1",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.7.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
